@@ -1,3 +1,4 @@
+0.8.3 @12/20/2001 22:45:00 GMT@
 0.8.2 @12/20/2001 21:45:00 GMT@
 0.8.1 @12/14/2001 00:25:00 GMT@
 0.8.0 @12/13/2001 22:15:00 GMT@
